force-app/main/default/objects/Relationship__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information about how these two people are related.</description>
    <inlineHelpText>Additional information about how these two people are related.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>