force-app/main/default/objects/Relationship__c/fields/ReciprocalRelationship__c.field-meta.xml
<CustomField>
    <fullName>ReciprocalRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Reciprocal Relationship record. This field is automatically populated. Manually updating this field could result in errors.</description>
    <inlineHelpText>Lookup to the related Reciprocal Relationship record. This field is automatically populated. Manually updating this field could result in errors.</inlineHelpText>
    <label>Reciprocal Relationship</label>
    <referenceTo>Relationship__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>