force-app/main/default/objects/Relationship__c/fields/Relationship_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Explanation__c</fullName>
    <description>Text formula that constructs a sentence explaining the relationship between the two Contacts</description>
    <formula>TEXT(RelatedContact__r.Salutation) + &quot; &quot; + RelatedContact__r.FirstName + &quot; &quot; + RelatedContact__r.LastName
+ &quot;  &quot;  +  $Label.Relationship_Explanation_Connector + &quot; &quot; +
TEXT(Contact__r.Salutation) + &quot; &quot; + Contact__r.FirstName + &quot; &quot; + Contact__r.LastName + &quot;&apos;s &quot; + TEXT(Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A sentence that clarifies who&apos;s who in the Relationship. For example, &quot;&apos;s &quot; Joe Ada is Sara Cordova&apos;s employer.&quot;&apos;s &quot; This field is read-only.</inlineHelpText>
    <label>Relationship Explanation</label>
    <type>Text</type>
</CustomField>