force-app/main/default/objects/Relationship__c/validationRules/Contact_Do_Not_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Do_Not_Change</fullName>
    <active>true</active>
    <description>Do not allow users to change the Contact value as it damages the paired relationship data.</description>
    <errorConditionFormula>AND(NOT( ISNEW() ), ISCHANGED(  Contact__c ))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Instead of changing the Contacts in this Relationship, either delete this record, or if appropriate, add an end date and update the status to Former. Then create a new Relationship record between the new Contacts.</errorMessage>
</ValidationRule>